# bucatini

./: .gitignore  .gitmodules  .rusty-hook.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.en.md  README.ja.md  README.md  THIRD-PARTY-NOTICES  build.rs  release-please-config.json
.github/workflows/: ci.yml  release.yml  windows-smoke.yml
.superpowers/sdd/: task-6-report.md
docs/superpowers/plans/: 2026-06-27-ndi-to-syphon.md
docs/superpowers/specs/: 2026-06-27-ndi-to-syphon-design.md  2026-06-30-gui-contextual-status-design.md
packaging/: make-ico.py
packaging/macos/: Info.plist  build-app.sh  build-dmg.sh  make-icns.sh
packaging/windows/: bucatini.iss
scripts/: fetch-fonts.sh  setup-syphon.sh
src/: cli.rs  lib.rs  main.rs  run.rs
src/ndi/: mod.rs  sys.rs
src/output/: mod.rs  syphon.rs
